--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3307/yunzhi_spring_boot?useSSL=fals
 spring.datasource.username=root
 spring.datasource.password=
 spring.main.allow-bean-definition-overriding=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
