--- a/web-app/angular.json
+++ b/web-app/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.sass",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
@@ -94,6 +95,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.sass",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
@@ -126,6 +128,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "web-app"
 }
