--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,37 +36,37 @@ jobs:
 
   dingding-error:
     runs-on: ubuntu-latest
-    needs: [ unit-test ]
+    needs: [unit-test]
     if: ${{ failure() }}
     steps:
       - uses: actions/checkout@v4
       - name: Send dingding notify error
         uses: zcong1993/actions-ding@master
         with:
-          dingToken: ${{env.token}} #钉钉token
+          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291 #钉钉token
           body: |
             {
               "msgtype": "text",
               "text": {
                   "content": '[打叉][打叉][打叉]  执行失败\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
              }
-      }
+        }
 
 
-    dingding-success:
-      runs-on: ubuntu-latest
-      if: ${{ success() }}
-      needs: [ unit-test ]
-      steps:
-        - uses: actions/checkout@v4
-        - name: Send dingding notify success
-          uses: zcong1993/actions-ding@master
-          with:
-            dingToken: ${{env.token}} #钉钉token
-            body: |
-              {
-               "msgtype": "text",
-               "text": {
-                   "content": '[微笑][微笑][微笑]  执行成功\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
-               }
-              }
+  dingding-success:
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    needs: [unit-test]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Send dingding notify success
+        uses: zcong1993/actions-ding@master
+        with:
+          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291 #钉钉token
+          body: |
+            {
+             "msgtype": "text",
+             "text": {
+                 "content": '[微笑][微笑][微笑]  执行成功\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
+             }
+            }
