--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: GitHub Actions
-run-name: integrationTesting
+run-name: ci
 
 #设置触发时机
 on:
+  push:
+    tags:
+      '*'
   pull_request:
     branches: [ main ]
 
@@ -13,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     # 定义任务的步骤 串行
     steps:
-      # 将仓库的代码检出到当前工作目录中
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -23,16 +25,15 @@ jobs:
           node-version: 18.16.0
 
       - name: angular-test
-        # 执行shell命令
         run: |
-          pwd # 打印当前工作目录
-          cd web-app # 切换到 web 目录
-          env # 显示环境变量信息
-          npm install # 安装 Node.js 依赖
-          # 运行angular 单元测试
+          pwd
+          cd web-app
+          env
+          pwd
+          npm install
           npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-          # 构建 Angular 应用
           npm run build
+  
 
   dingding-error:
     runs-on: ubuntu-latest
@@ -43,15 +44,15 @@ jobs:
       - name: Send dingding notify error
         uses: zcong1993/actions-ding@master
         with:
-          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291 #钉钉token
+          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291
           body: |
             {
               "msgtype": "text",
               "text": {
                   "content": '[打叉][打叉][打叉]  执行失败\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
-             }
-        }
-
+              }
+            }
+  
 
   dingding-success:
     runs-on: ubuntu-latest
@@ -62,7 +63,7 @@ jobs:
       - name: Send dingding notify success
         uses: zcong1993/actions-ding@master
         with:
-          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291 #钉钉token
+          dingToken: 2d1667a91ee5d4bf4cee1b25789b9935829bdb088dbdb71cfeafd789cdb35291
           body: |
             {
              "msgtype": "text",
