--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,6 +9,9 @@
     "test": "ng test"
   },
   "private": true,
+  "engines": {
+    "node": "18.16.0"
+  },
   "dependencies": {
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.9",
@@ -20,6 +23,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@yunzhi/ng-common": "^15.0.2",
+    "@yunzhi/ng-mock-api": "^15.0.2",
+    "@tethys/store": "15.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
