--- a/web-app/angular.json
+++ b/web-app/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/custom-theme.scss",
               "src/styles.sass",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
@@ -96,7 +96,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.sass",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
